# advent-of-code

./: .gitignore  .project  README.md  new-day.sh  new-year.sh  package-lock.json  shell.nix
2015/: .gitignore  README.md  common.rkt  day01.rkt  devenv.nix  new-day.sh  test.sh
2024/: README.md  new-day.sh
2024/Day14/src/: CMakeLists.txt  day14.cxx
2025/: day01.test.ts  day01.ts  day02.test.ts  day02.ts  day03.test.ts  day03.ts  day04.test.ts  day04.ts  day05.test.ts  day05.ts  day06.test.ts  day06.ts  day07.test.ts  day07.ts  day08.test.ts  day08.ts  day09.test.ts  day09.ts  day10.test.ts  day10.ts  package-lock.json  package.json
Day01/: AoC.Day1.sln  README.md  devenv.nix
Day02/: README.md  devenv.nix
Day03/: README.md  aoc-day3.part2.rock  devenv.nix  test.sh
Day04/: README.md
Day04/aoc-day04/: pyproject.toml
Day04/aoc-day04/aoc_day04/: day04.py
Day04/aoc-day04/tests/: test_day04.py
Day05/: Day05.bas  Day05Part2.bas  README.md  aoc-day5.part2.test.sh  aoc-day5.test.sh  output.txt
Day06/: README.md  devenv.nix
Day07/: README.md
Day08/: README.md  devenv.nix
Day09/: AoC.Day09.csproj  AoC.Day09.sln  Day09.cs  README.md  Tests.cs  devenv.nix
Day1/: README.md
Day10/: README.md  day10.sql  devEnvPg.session.sql  devenv.nix  fresh_devenv.sh
Day11/: README.md  devenv.nix
Day12/: README.md
Day13/: README.md  devenv.nix  fix_ceedling.sh
Day14/: README.md  devenv.nix
Day15/: README.md  devenv.nix
Day16/: .gitignore  README.md
Day17/: README.md  day17  day17.go  day17_test.go  devenv.nix  go.mod
Day18/: README.md  devenv.nix
(+184 files in other folders)
